k8s-monitoring/prometheus/alertmanager/k8s-alertmanager-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: alertmanager-service
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  ports:
  - name: alertui
    protocol: TCP
    port: 9093
    targetPort: 9093
